# legumemanager

./: Cargo.toml  README.md
src/: cli.rs  cli_container.rs  cli_host.rs  container_cli.rs  create.rs  env_vars.rs  main.rs  manager.rs  util.rs
src/cli_container/: cli.rs  commands.rs  main.rs
src/cli_container/commands/: host_exec.rs  init.rs
src/cli_host/: cli.rs  cli_ansible.rs  commands.rs  main.rs  util.rs
src/cli_host/commands/: create.rs  enter.rs  mod.rs  shell.rs
src/generator/: create.rs  enter.rs  manager.rs  mod.rs
