[package]
name = "legumemanager"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0"
users = "0.11.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["blocking"] }
gethostname = "0.4.3"
serde = { version = "1.0.196", features = ["derive"] }
anyhow = "1.0.79"
serde_json = "1.0.113"

